<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp">

        <Button
            android:id="@+id/bgadd_button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/save"
            app:layout_constraintLeft_toRightOf="@id/bgadd_button_cancel"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bgadd_notes_edittext_wrapper" />

        <Button
            android:id="@+id/bgadd_button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/bgadd_button_save"
            app:layout_constraintTop_toTopOf="@id/bgadd_button_save" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bgadd_name_edittext_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            app:boxBackgroundColor="@android:color/white"
            app:boxBackgroundMode="outline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/bgadd_name_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/board_game_name_hint"
                android:inputType="textCapWords"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bgadd_difficulty_edittext_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            app:boxBackgroundColor="@android:color/white"
            app:boxBackgroundMode="outline"
            app:layout_constraintLeft_toLeftOf="@id/bgadd_name_edittext_wrapper"
            app:layout_constraintTop_toBottomOf="@id/bgadd_name_edittext_wrapper">

            <EditText
                android:id="@+id/bgadd_difficulty_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/board_game_difficulty_hint"
                android:inputType="number"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bgadd_min_players_edittext_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            app:boxBackgroundColor="@android:color/white"
            app:boxBackgroundMode="outline"
            app:layout_constraintLeft_toLeftOf="@id/bgadd_difficulty_edittext_wrapper"
            app:layout_constraintTop_toBottomOf="@id/bgadd_difficulty_edittext_wrapper">

            <EditText
                android:id="@+id/bgadd_min_players_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/board_game_minimum_players_hint"
                android:inputType="number"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bgadd_max_players_edittext_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            app:boxBackgroundColor="@android:color/white"
            app:boxBackgroundMode="outline"
            app:layout_constraintLeft_toLeftOf="@id/bgadd_min_players_edittext_wrapper"
            app:layout_constraintTop_toBottomOf="@id/bgadd_min_players_edittext_wrapper">

            <EditText
                android:id="@+id/bgadd_max_players_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/board_game_maximum_players_hint"
                android:inputType="number"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bgadd_description_edittext_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            app:boxBackgroundColor="@android:color/white"
            app:boxBackgroundMode="outline"
            app:layout_constraintLeft_toLeftOf="@id/bgadd_max_players_edittext_wrapper"
            app:layout_constraintTop_toBottomOf="@id/bgadd_team_options_radiogroup">

            <EditText
                android:id="@+id/bgadd_description_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description_hint"
                android:inputType="textCapSentences"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bgadd_notes_edittext_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            app:boxBackgroundColor="@android:color/white"
            app:boxBackgroundMode="outline"
            app:layout_constraintLeft_toLeftOf="@id/bgadd_house_rules_edittext_wrapper"
            app:layout_constraintTop_toBottomOf="@id/bgadd_house_rules_edittext_wrapper">

            <EditText
                android:id="@+id/bgadd_notes_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/notes_hint"
                android:inputType="textCapSentences"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bgadd_house_rules_edittext_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            app:boxBackgroundColor="@android:color/white"
            app:boxBackgroundMode="outline"
            app:layout_constraintLeft_toLeftOf="@id/bgadd_description_edittext_wrapper"
            app:layout_constraintTop_toBottomOf="@id/bgadd_description_edittext_wrapper">

            <EditText
                android:id="@+id/bgadd_house_rules_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/board_game_house_rules_hint"
                android:inputType="textCapSentences"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body1" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/bgadd_play_modes_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bgadd_play_modes_header">

            <CheckBox
                android:id="@+id/bgadd_checkbox_competitive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/competitive"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bgadd_play_modes_header" />

            <CheckBox
                android:id="@+id/bgadd_checkbox_cooperative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cooperative"
                app:layout_constraintLeft_toRightOf="@id/bgadd_checkbox_competitive"
                app:layout_constraintTop_toTopOf="@id/bgadd_checkbox_competitive" />

            <CheckBox
                android:id="@+id/bgadd_checkbox_solitaire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/solitaire"
                app:layout_constraintLeft_toRightOf="@id/bgadd_checkbox_cooperative"
                app:layout_constraintTop_toTopOf="@id/bgadd_checkbox_competitive" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/bgadd_team_options_radiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bgadd_team_options_header">

            <RadioButton
                android:id="@+id/bgadd_no_teams_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no_teams" />

            <RadioButton
                android:id="@+id/bgadd_teams_allowed_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/teams_allowed" />

            <RadioButton
                android:id="@+id/bgadd_teams_only_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/teams_only" />
        </RadioGroup>

        <TextView
            android:id="@+id/bgadd_categories_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/categories_header"
            app:layout_constraintLeft_toLeftOf="@id/bgadd_max_players_edittext_wrapper"
            app:layout_constraintTop_toBottomOf="@id/bgadd_max_players_edittext_wrapper"
            style="@style/TextAppearance.MdcTypographyStyles.Subtitle1"/>

        <TextView
            android:id="@+id/bgadd_categories_output"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="4dp"
            android:visibility="gone"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintLeft_toLeftOf="@id/bgadd_categories_header"
            app:layout_constraintTop_toBottomOf="@id/bgadd_categories_header"
            tools:text="Strategy, Luck, Ameritrash" />

        <TextView
            android:id="@+id/bgadd_play_modes_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/board_game_play_modes_header_hint"
            app:layout_constraintLeft_toLeftOf="@id/bgadd_categories_header"
            app:layout_constraintTop_toBottomOf="@id/bgadd_categories_chip_group"
            style="@style/TextAppearance.MdcTypographyStyles.Body1"/>

        <TextView
            android:id="@+id/bgadd_team_options_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/board_game_team_options_header_hint"
            app:layout_constraintLeft_toLeftOf="@id/bgadd_categories_output"
            app:layout_constraintTop_toBottomOf="@id/bgadd_play_modes_container"
            app:layout_goneMarginTop="8dp"
            style="@style/TextAppearance.MdcTypographyStyles.Subtitle1"/>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/bgadd_categories_chip_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="4dp"
            app:layout_constraintLeft_toLeftOf="@id/bgadd_categories_header"
            app:layout_constraintTop_toBottomOf="@id/bgadd_categories_header"
            app:layout_constraintWidth_default="wrap"
            app:singleSelection="true" />

        <com.thomashaertel.widget.MultiSpinner
            android:id="@+id/bgadd_multi_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:hint="@string/board_game_multi_spinner_hint"
            android:textColorHint="#000000"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/bgadd_categories_header"
            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body1"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>