<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/activity_confirm_players_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="18sp"
        android:text="@string/confirm_players_title"
        android:textAlignment="center"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activity_confirm_players_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/activity_confirm_players_title_textview"
        app:layout_constraintBottom_toTopOf="@id/activity_confirm_players_yes_button"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/activity_confirm_players_yes_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/yes"
        android:layout_marginRight="8dp" />

    <Button
        android:id="@+id/activity_confirm_players_no_button"
        app:layout_constraintRight_toLeftOf="@id/activity_confirm_players_yes_button"
        app:layout_constraintTop_toTopOf="@id/activity_confirm_players_yes_button"
        android:layout_marginRight="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no"/>

</androidx.constraintlayout.widget.ConstraintLayout>