<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/memberact_image"
        style="@style/DetailImgStyle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/memberact_nickname_output"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_launcher_foreground"/>

    <TextView
        android:id="@+id/memberact_nickname_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        style="@style/TextAppearance.MdcTypographyStyles.Headline5"
        tools:text="Bailey"/>

    <TextView
        android:id="@+id/memberact_date_created_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/memberact_image"
        app:layout_constraintLeft_toRightOf="@id/memberact_image"
        android:text="@string/date_created_colon_header"
        android:layout_marginLeft="16dp"
        style="@style/TextAppearance.MdcTypographyStyles.Body1"/>

    <TextView
        android:id="@+id/memberact_date_created_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/memberact_date_created_header"
        app:layout_constraintLeft_toRightOf="@id/memberact_date_created_header"
        android:layout_marginLeft="8dp"
        tools:text="29 July 2020"
        style="@style/TextAppearance.MdcTypographyStyles.Body1"/>

    <TextView
        android:id="@+id/memberact_groups_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/memberact_date_created_header"
        app:layout_constraintTop_toBottomOf="@id/memberact_date_created_header"
        android:text="@string/groups_colon_header"
        android:layout_marginTop="8dp"
        style="@style/TextAppearance.MdcTypographyStyles.Body1"/>

    <TextView
        android:id="@+id/memberact_groups_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/memberact_groups_header"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="@id/memberact_groups_header"
        style="@style/TextAppearance.MdcTypographyStyles.Body1"
        tools:text="7"/>

    <TextView
        android:id="@+id/memberact_notes_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/memberact_image"
        app:layout_constraintTop_toBottomOf="@id/memberact_image"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="4dp"
        android:text="@string/notes_colon_header"
        style="@style/TextAppearance.MdcTypographyStyles.Body1"/>

    <TextView
        android:id="@+id/memberact_notes_output"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/memberact_notes_header"
        app:layout_constraintTop_toTopOf="@id/memberact_notes_header"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="20dp"
        style="@style/TextAppearance.MdcTypographyStyles.Body1"
        tools:text="Ipsum lorem deus ex machina novus ordo ipsum."/>

    <!--TODO replace with imagebutton?? Or stylise as hyperlink? Or simply remove?-->
    <TextView
        android:id="@+id/memberact_view_groups"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/memberact_groups_output"
        app:layout_constraintTop_toTopOf="@id/memberact_groups_output"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/view_groups"
        style="@style/TextAppearance.MdcTypographyStyles.Body1"/>

    <Button
        android:id="@+id/memberact_edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/memberact_delete_button"
        app:layout_constraintTop_toBottomOf="@id/memberact_notes_output"
        android:layout_marginTop="20dp"
        android:text="@string/edit"/>

    <Button
        android:id="@+id/memberact_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/memberact_edit_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/memberact_edit_button"
        android:text="@string/delete"/>

</androidx.constraintlayout.widget.ConstraintLayout>