<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageButton
        android:id="@+id/dialog_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/ic_add_black_24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_search_bar" />

    <TextView
        android:id="@+id/dialog_button_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        app:layout_constraintBottom_toBottomOf="@id/dialog_add_button"
        app:layout_constraintLeft_toRightOf="@id/dialog_add_button"
        app:layout_constraintTop_toTopOf="@id/dialog_add_button"
        android:text="@string/create_new_member"
        style="@style/TextAppearance.MdcTypographyStyles.Body1"/>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/dialog_search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dialog_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintHeight_percent="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_add_button"
        app:layout_constraintBottom_toTopOf="@id/add_group_members_button_save"
        android:layout_marginBottom="4dp"/>

    <Button
        android:id="@+id/add_group_members_button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_members"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"/>

    <Button
        android:id="@+id/add_group_members_button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="@id/add_group_members_button_save"
        app:layout_constraintRight_toLeftOf="@id/add_group_members_button_save"
        android:layout_marginRight="12dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>